fixed horizontal scrollbar height

--- a/sbanken/src/scss/main.scss
+++ b/sbanken/src/scss/main.scss
@@ -56,6 +56,7 @@ a {
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
     width: 8px;
+    height: 8px;
 }
 
 *::-webkit-scrollbar-track {
